Remove all usages of Stream.toList(). (#265)